--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vitalets/google-translate-api": "^5.0.0",
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
+    "mongodb": "^3.6.4",
+    "mongoose": "^5.11.18",
     "nodemon": "^2.0.7",
     "request": "^2.88.2",
     "tmi.js": "^1.7.1"
